Fix search box width on mobile devices

--- a/scss/modules/_search.scss
+++ b/scss/modules/_search.scss
@@ -10,8 +10,9 @@
   //float: left; /* LTR */
   margin-right: 5px; /* LTR */
   padding: 4px;
+  width:100%;
 }
-.search-block-form {
+         .search-block-form {
   margin-left: 1em;
   padding: 1rem;
   @include breakpoint(md) {
@@ -19,7 +20,7 @@
     padding: 0;
   }
 }
-#block-pellucid-monoset-search > div {
+         #block-pellucid-monoset-search > div {
   display: block;
   float: left;
   height: 30px;
